--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -12,6 +12,8 @@
     left: auto !important;
     top: auto !important;
   }
+
+  
   
   
   .fab-button.active{
@@ -23,6 +25,13 @@
     background-color: white !important;
     transition: .8s ease;
     animation: fadeIn linear .8s ;
+  
+  }
+
+  .fab-button.active:hover{
+    transition: .3s ease;
+
+box-shadow: 1px 2px 1px 2px white;
   
   }
   
